@@ -5,6 +5,14 @@ isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-pac
 
 ##################################################################
 
+opsi-winst/opsi-script (4.12.0.5) stable; urgency=low
+
+  * osmain / osinteractivegui: new cli argument /logproductid
+    just used for logging, do not try to get data from service
+
+-- Detlef Oertel <d.oertel@uib.de>  Mon, 11 Sep 2017:15:00:00 +0200
+
+
 opsi-winst/opsi-script (4.12.0.4) stable; urgency=low
 
   * osconf: readConfigFromService: protect from wrong data types from service
